Change name of the project

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "0nedark/servicer",
+    "name": "mvf-tech/servicer",
     "type": "library",
     "license": "MIT",
     "description": "Defines common php consumers",
