--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,6 @@ services:
     container_name: servicer-linter
     volumes:
     - ./src:/code/src:cached
+    - ./tests/unit:/code/tests:cached
     - ./linter/php_cs.php:/code/.php_cs.dist:cached
     - ./linter/mvf_ruleset.xml:/code/mvf_ruleset.xml:cached
