--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,12 @@ services:
     - ./tests/unit:/code/tests:cached
     - ./linter/php_cs.php:/code/.php_cs.dist:cached
     - ./linter/mvf_ruleset.xml:/code/mvf_ruleset.xml:cached
+
+  coverage:
+    build: .
+    container_name: servicer-coverage
+    ports:
+      - 8000:80
+    volumes:
+    - .:/code:cached
+    - ./tests/_output/coverage:/usr/share/nginx/html:cached
