Add Event handler tests

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
-        "codeception/codeception": "^2.5"
+        "codeception/codeception": "^2.5",
+        "codeception/aspect-mock": "^3.0"
     }
 }
