--- a/codeception.yml
+++ b/codeception.yml
@@ -1,19 +1,13 @@
-namespace: MVF\Servicer\Tests
-
-suites:
-    unit:
-        path: unit
-
-settings:
-    bootstrap: _bootstrap.php
-    shuffle: true
-    lint: true
-
 paths:
     tests: tests
     output: tests/_output
+    data: tests/_data
     support: tests/_support
-    data: tests
+    envs: tests/_envs
+actor_suffix: Tester
+extensions:
+    enabled:
+    - Codeception\Extension\RunFailed
 
 coverage:
     enabled: true
