--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -1,5 +1,12 @@
+# Codeception Test Suite Configuration
+#
+# Suite for acceptance tests.
+# Perform tests in browser using the WebDriver or PhpBrowser.
+# If you need both WebDriver and PHPBrowser tests - create a separate suite.
+
 actor: AcceptanceTester
 modules:
     enabled:
-        - \Codeception\Module\Cli
-        - \MVF\Servicer\Tests\Helper\Acceptance
+        - PhpBrowser:
+            url: http://localhost/myapp
+        - \Helper\Acceptance
