--- a/tests/unit.suite.yml
+++ b/tests/unit.suite.yml
@@ -1,4 +1,10 @@
+# Codeception Test Suite Configuration
+#
+# Suite for unit or integration tests.
+
 actor: UnitTester
 modules:
     enabled:
-        - \MVF\Servicer\Tests\Helper\Unit
+        - Asserts
+        - \Helper\Unit
+        - \Helper\AspectMock
