MER-1151: Add tracing to exec commands and log exceptions

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
         "symfony/console": "^4.2",
         "aws/aws-sdk-php": "^3.82",
         "lstrojny/functional-php": "^1.9",
-        "opentracing/opentracing": "1.0.0-beta6"
+        "opentracing/opentracing": "1.0.0-beta6",
+        "nesbot/carbon": "^2.21",
+        "datadog/dd-trace": "^0.29.0",
+        "symfony/monolog-bundle": "^3.4"
     },
     "autoload": {
         "psr-4": {
